<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/showFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.movie.MovieFragment">

    <EditText
        android:id="@+id/showSearchBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="14dp"
        android:layout_marginStart="5dp"
        android:hint="@string/search_hint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:padding="10dp"
        app:layout_constraintEnd_toStartOf="@id/showSearchButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageButton
        android:id="@+id/showSearchButton"
...
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/sort_button"
        android:src="@drawable/ic_baseline_search_24"
        app:layout_constraintBottom_toBottomOf="@id/showSearchBar"
        app:layout_constraintEnd_toEndOf="@id/showSortButton"
        app:layout_constraintStart_toEndOf="@id/showSearchBar"
        app:layout_constraintTop_toTopOf="@id/showSearchBar" />

    <ImageButton
        android:id="@+id/showSortButton"
        android:layout_width="wrap_content"
...
        app:layout_constraintBottom_toBottomOf="@id/showSearchButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/showSearchButton"
        app:layout_constraintTop_toTopOf="@id/showSearchButton" />

    <TextView
        android:id="@+id/noDataText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/no_data_available"
        android:textAlignment="center"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvShow"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/showSearchBar"
...
