<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/movieFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.movie.MovieFragment">

    <EditText
        android:id="@+id/movieSearchBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="14dp"
        android:layout_marginStart="5dp"
        android:hint="@string/search_hint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:padding="10dp"
        app:layout_constraintEnd_toStartOf="@id/movieSearchButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/movieSearchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/sort_button"
        android:src="@drawable/ic_baseline_search_24"
        app:layout_constraintBottom_toBottomOf="@id/movieSearchBar"
        app:layout_constraintEnd_toEndOf="@id/movieSortButton"
        app:layout_constraintStart_toEndOf="@id/movieSearchBar"
        app:layout_constraintTop_toTopOf="@id/movieSearchBar" />

    <ImageButton
        android:id="@+id/movieSortButton"
        android:layout_width="wrap_content"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMovie"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/movieSearchBar"
...
